feat: Adding new endpoint for genereate PDF SGM
